--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "commitlint": "^17.4.2",
+    "element-plus": "^2.2.28",
     "eslint": "^8.33.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-config-standard-with-typescript": "^33.0.0",
@@ -40,6 +41,7 @@
     "@package-ui/components": "workspace:*",
     "@package-ui/theme-chalk": "workspace:*",
     "@package-ui/utils": "workspace:*",
-    "element-plus": "^2.2.28"
+    "@vitepress-demo-preview/component": "^2.1.0",
+    "@vitepress-demo-preview/plugin": "^1.1.6"
   }
 }
