--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "private": true,
   "scripts": {
     "lint": "eslint --ext .js,.jsx,.ts,.tsx,.vue --fix --quiet ./",
+    "prettier": "prettier --write .",
     "postinstall": "husky install",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs",
-    "dev": "pnpm -C play dev"
+    "dev": "pnpm -C play dev",
+    "build:theme": "pnpm run -C packages/theme-chalk build"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +18,9 @@
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
     "@types/node": "^18.11.18",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@types/sass": "^1.43.1",
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.50.0",
     "commitlint": "^17.4.2",
     "element-plus": "^2.2.28",
     "eslint": "^8.33.0",
@@ -30,6 +34,8 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.1.0",
     "prettier": "^2.8.3",
+    "rimraf": "^4.1.2",
+    "sass": "^1.58.0",
     "typescript": "^4.9.4",
     "vitepress": "1.0.0-alpha.43",
     "vue": "^3.2.45"
